--- a/SOURCE/app/src/main/res/layout/information_layout.xml
+++ b/SOURCE/app/src/main/res/layout/information_layout.xml
@@ -73,13 +73,17 @@
             android:layout_width="match_parent"
             android:layout_height="57.5dp"
             android:clickable="true"
-            android:layout_marginHorizontal="20dp">
+            android:layout_marginHorizontal="20dp"
+            android:background="@drawable/red_round_pressed"
+            >
+
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_alignParentLeft="true"
                 android:layout_centerVertical="true"
                 android:src="@mipmap/ic_gd"
+
 
                 />
             <TextView
